--- a/ContactUsDemo/app/package.json
+++ b/ContactUsDemo/app/package.json
@@ -12,7 +12,8 @@
         "react-scripts-ts": "2.13.0",
         "redux": "^3.7.2",
         "semantic-ui-css": "^2.2.14",
-        "semantic-ui-react": "^0.78.2"
+        "semantic-ui-react": "^0.78.2",
+        "whatwg-fetch": "^2.0.3"
     },
     "scripts": {
         "start": "react-scripts-ts start",
