--- a/ContactUsDemo/app/package.json
+++ b/ContactUsDemo/app/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@types/react-redux": "^5.0.14",
+        "@types/redux-logger": "^3.0.5",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-move": "^2.6.0",
@@ -11,6 +12,7 @@
         "react-redux-form": "^1.16.5",
         "react-scripts-ts": "2.13.0",
         "redux": "^3.7.2",
+        "redux-logger": "^3.0.6",
         "semantic-ui-css": "^2.2.14",
         "semantic-ui-react": "^0.78.2",
         "whatwg-fetch": "^2.0.3"
