--- a/ContactUsDemo/app/package.json
+++ b/ContactUsDemo/app/package.json
@@ -7,6 +7,8 @@
         "@types/react-redux": "^5.0.14",
         "@types/redux-logger": "^3.0.5",
         "d3-ease": "^1.0.3",
+        "node-sass-chokidar": "0.0.3",
+        "npm-run-all": "^4.1.2",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-move": "^2.6.0",
@@ -20,8 +22,13 @@
         "whatwg-fetch": "^2.0.3"
     },
     "scripts": {
-        "start": "react-scripts-ts start",
-        "build": "react-scripts-ts build",
+        "build-css": "node-sass-chokidar src/ -o src/",
+        "watch-css":
+            "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+        "start-js": "react-scripts-ts start",
+        "start": "npm-run-all -p watch-css start-js",
+        "build-js": "react-scripts-ts build",
+        "build": "npm-run-all build-css build-js",
         "test": "react-scripts-ts test --env=jsdom",
         "eject": "react-scripts-ts eject"
     },
