--- a/ContactUsDemo/app/package.json
+++ b/ContactUsDemo/app/package.json
@@ -23,8 +23,7 @@
     },
     "scripts": {
         "build-css": "node-sass-chokidar src/ -o src/",
-        "watch-css":
-            "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+        "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
         "start-js": "react-scripts-ts start",
         "start": "npm-run-all -p watch-css start-js",
         "build-js": "react-scripts-ts build",
